feat(*): add config, detailed swagger
